Ran into some bugs. in about-me and contacts, the carousel and forms appear above Menu bar, even though z-index is 200;

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,6 @@ main {
   align-items: center;
   opacity: 1;
   transition: all 0.4s linear;
-  z-index: 50;
 }
 .menu-wrap .menu > div > div {
   text-align: center;
@@ -364,7 +363,6 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  z-index: 10;
 }
 
 .overflow-container {
