--- a/css/partials/_about-me.scss
+++ b/css/partials/_about-me.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    z-index: 10;
+    // z-index: -10;
 }
 
 .overflow-container {
