--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -126,7 +126,6 @@
     @include center;
     opacity: 1;
     transition: all 0.4s linear;
-    z-index: 50;
   }
   
 // Fade in effect
